<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/first_menu">
        <item
            android:id="@+id/section1"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/title_section1" />

        <item
            android:id="@+id/section2"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/title_section2" />

        <item
            android:id="@+id/section3"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/title_section3" />
    </group>

    <group android:id="@+id/second_menu">

        <item
            android:id="@+id/section4"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/title_section4" />

        <item
            android:id="@+id/section5"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/title_section5" />

    </group>
</menu>